2006-03-13  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/interrupt.h, src/interrupt.c : functions for interruption
	handling added
	* src/structural_properties.c (igraph_diameter) : progress
	handler and interruption handling added
	* src/igraph.h : now includes interrupt.h
	* src/Makefile.am : updated to include the new files
	* src/error.c : added new error code IGRAPH_INTERRUPTED
	
2006-03-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_lattice) : nonmutual and directed
	bug corrected

2006-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_diameter) :
	updated
	(igraphmodule_Graph_get_shortest_paths) : updated
	(igraphmodule_Graph_get_all_shortest_paths) : updated
	
	* src/structural_properties.c (igraph_get_all_shortest_paths) :
	to argument added

	* src/structural_properties.c (igraph_diameter) : from, to, path
	arguments added
	* examples/simple/igraph_diameter.c : updated

	* src/structural_properties.c (igraph_get_shortest_paths) : 
	to argument added
	* examples/simple/igraph_get_shortest_paths.c : added

2006-03-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_idage)
	(igraph_measure_dynamics_idage_debug, igraph_i_tuppercrit): error 
	estimation added

2006-03-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/error.h (igraph_warning_handler_t, IGRAPH_WARNING) : added
	* src/error.c (igraph_i_warning_handler, igraph_warning_handler_print)
	(igraph_warning, igraph_set_warning_handler) : added
	* src/foreign.c (igraph_read_graph_ncol) : added two warnings

2006-03-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_Read_Ncol) :
	dummy update for predef argument
	
	* src/foreign.c (igraph_read_graph_ncol) : added predef argument

2006-03-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_fruchterman_reingold)
	(igraph_layout_fruchterman_reingold_3d, igraph_layout_kamada_kawai)