@@ -11,7 +11,6 @@ o better random number generator handling (init with seed, etc...)
 o rewrite iterators
 o R interface to all (sensible) functions
 o proper documentation (docbook & R) for all (sensible) functions
-o get (exact) number of motifs
 o get non-structural info from Pajek files
 o write Pajek file
 o read and write non-structural info from/to GraphML files
