@@ -1,3 +1,7 @@
+2006-03-18  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/motifs.c (igraph_motifs_randesu_no) : added
+
 2006-03-13  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* src/interrupt.h, src/interrupt.c : functions for interruption
